feat: adicionei o user como parametro de mock e adicionei logs para entender pq os frames vão vazios
